# algotutor

./: .env.example  .gitignore  README.md  USAGE.md  algotutor.db  demo.py  pyproject.toml  simple_tutor.py  study_system.py  study_system_analysis.md  test_study_system.py  tutor_cli.py
algotutor/: __init__.py  main.py
algotutor/cli/: __init__.py  interactive.py  main.py
algotutor/core/: config.py
algotutor/data/: __init__.py  curriculum.py
algotutor/models/: __init__.py
algotutor/services/: __init__.py  curriculum.py  database.py  execution.py  llm.py
cb/: __init__.py  main.py
cb/cli/: __init__.py  main.py
cb/core/: config.py
cb/data/: curriculum.py
cb/models/: __init__.py
cb/services/: curriculum.py  database.py  execution.py  llm.py
src/algorithm_tutor/: __init__.py  cli.py  pattern.py  patterns_db.py  study_session.py  tutor.py
study_data/: student_progress.json
tests/: test_e2e_cli.py  test_interactive_selector_curses.py  test_pattern.py  test_patterns_db.py  test_pick_problem_interactive.py  test_sanitize_tabs_indentation.py  test_study_session.py
