[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cb-algorithm-tutor"
version = "0.1.0"
description = "LLM-powered algorithm tutor with accountability and persistence"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "josephedward"}]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "rich>=10.0.0",
    "click>=8.0.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.8.0",
    "requests>=2.25.0",
    "pygments>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

[project.scripts]
cb = "cb.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true